--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
 <html>
 <head>
-<title>è‰æ¦´ç¤¾å€ 1024 - t66y.com</title>
-<meta name="description" content="è‰æ¦´ç¤¾å€ 1024 t66y.com">
-<meta name="keywords" content="è‰æ¦´,1024,è‰æ¦´ç¤¾å€,1024app,è‰æ¦´app,å°è‰app,äºæ´²ç„¡ç¢¼,äºæ´²æœ‰ç¢¼,æ­ç¾ç„¡ç¢¼,å‹•æ¼«ç„¡ç¢¼,è½‰è²¼äº¤æµ,æŠ€è¡“è¨è«–å€,é”è“‹çˆ¾çš„æ——å¹Ÿ,æ–°æ™‚ä»£çš„æˆ‘å€‘,æˆäººæ–‡å­¸,åœ¨ç·šæˆäººå½±é™¢,httpä¸‹è¼‰,è‰æ¦´è²¼åœ–,è‰æ¦´è³‡è¨Š,t66y.com">
+<title>²İÁñÉç…^ 1024 - t66y.com</title>
+<meta name="description" content="²İÁñÉç…^ 1024 t66y.com">
+<meta name="keywords" content="²İÁñ,1024,²İÁñÉç…^,1024app,²İÁñapp,Ğ¡²İapp,†ÖŞŸo´a,†ÖŞÓĞ´a,šWÃÀŸo´a,„ÓÂşŸo´a,ŞDÙN½»Á÷,¼¼ĞgÓ‘Õ“…^,ß_Éw –µÄÆìÃ,ĞÂ•r´úµÄÎÒ‚ƒ,³ÉÈËÎÄŒW,ÔÚ¾€³ÉÈËÓ°Ôº,httpÏÂİd,²İÁñÙNˆD,²İÁñÙYÓ,t66y.com">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 </head>
 <style type="text/css">
@@ -13,22 +15,22 @@ a:hover{text-decoration:underline;}
 <body bgcolor="#FFFFFF" text="#000000">
 <p align="center">
 <img border="0" src="index.gif"></p>
-<p align="center"><font color="#FF0000"><b>è­¦å‘Š / WARNING </b><br>
+<p align="center"><font color="#FF0000"><b>¾¯¸æ / WARNING </b><br>
 </font><br>
-æœ¬ç‰©å“å…§å®¹å¯èƒ½ä»¤äººåæ„Ÿï¼›ä¸å¯å°‡æœ¬ç‰©å“å…§å®¹æ´¾ç™¼ï¼Œå‚³é–±ï¼Œå‡ºå”®ï¼Œå‡ºç§Ÿï¼Œäº¤çµ¦<br>
-æˆ–å‡ºå€Ÿäºˆå¹´é½¡æœªæ»¿ 18 æ­²çš„äººå£«å‡ºç¤ºï¼Œæ’­æ”¾æˆ–æ’­æ˜ ã€‚<br>
+±¾ÎïÆ·ƒÈÈİ¿ÉÄÜÁîÈË·´¸Ğ£»²»¿ÉŒ¢±¾ÎïÆ·ƒÈÈİÅÉ°l£¬‚÷é†£¬³öÊÛ£¬³ö×â£¬½»½o<br>
+»ò³ö½èÓèÄêıgÎ´M 18 šqµÄÈËÊ¿³öÊ¾£¬²¥·Å»ò²¥Ó³¡£<br>
 <br>
 <font size="1" face="Verdana">This article contains material which may offernd and may not be 
 distributed, circulated, sold, hired, given, lent, shown, <br>
 played or projected to a person under the age of 18 years. All models are 18 or 
 older. </font><br>
-ã€€</p>
+¡¡</p>
 
 <p align="center">
 <b>
 <font size="7" face="Verdana">
-<a href="index.php">__ æ»¿ 18 æ­², 
-è«‹æŒ‰æ­¤ __</a></font></b><BR><BR>
-<a href="https://t66y.com/read.rss/">RSSé–±è®€å™¨</a>
+<a href="index.php">__ M 18 šq, 
+Õˆ°´´Ë __</a></font></b><BR><BR>
+<a href="https://t66y.com/read.rss/">RSSé†×xÆ÷</a>
 </p>
 </body></html>
